pull planner extra

--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -128,15 +128,18 @@ alternate_urls:
                     <div class="supporter-tier">
                         <h4>Supporters</h4>
                         <ul>
-                            <li style="color:#ffd34e; font-weight:700;">시아</li> <!--99$ 25/07/10-->
-                            <li style="color:#fff8e1">SpoonceDaSpoon</li> <!--54$ 26/01/20-->
-                            <li style="color:#ad7326">Arthur</li> <!--30$ 25/08/10-->
+                            <li style="color:#ffd34e; font-weight:700;">Alyda</li> <!--100$ 26/01/21-->
+                            <li style="color:#fff8e1">시아</li> <!--99$ 25/07/10-->
+                            <li style="color:#ad7326">SpoonceDaSpoon</li> <!--54$ 26/01/20-->
+                            <li>Arthur</li> <!--30$ 25/08/10-->
+                            <li>EMajorinc</li> <!--30$ 26/01/21-->
                             <li>안*현</li> <!--30000 25/09/10-->
                             <li>이*현</li> <!--30000 26/01/02-->
                             <li>ue</li> <!--15$ 25/09/09-->
                             <li>Skizor Kurogane</li><!--21$ 25/12/20-->
                             <li>rudytudysubs</li><!--15$ 26/01/18-->
                             <li>Trishelle</li> <!--12$ 26/01/20-->
+                            <li>skippy</li> <!--12$ 26/01/21-->
                             <li>kai</li> <!--9$ 25/08/22-->
                             <li>김*환</li> <!--9$ 25/07/18-->
                             <li>임*훈</li><!--10000 25/07/06-->
@@ -151,10 +154,12 @@ alternate_urls:
                             <li>Viiun</li> <!--6$ 26/01/02-->
                             <li>ShibaEnjoyer</li> <!--6$ 26/01/12-->
                             <li>Seagull</li> <!--6$ 26/01/20-->
+                            <li>Odderpop</li> <!--6$ 26/01/21-->
                             <li>Nova</li> <!--3$ 26/01/07-->
                             <li>Nerecky</li> <!--3$ 25/09/10-->
                             <li>Main</li> <!--3$ 25/10/18-->
                             <li>Shira</li> <!--3$ 26/01/20-->
+                            <li>Figaf Hguk</li> <!--3$ 26/01/21-->
                             <li>Ian</li><!--3000 25/06/20-->
                         </ul>
                     </div>
