--- a/apps/pull-calc/index.html
+++ b/apps/pull-calc/index.html
@@ -458,7 +458,8 @@ redirect_from:
 <script src="{{ site.baseurl }}/assets/js/nav.js?v={{ site.time | date: '%s' }}"></script>
 
 <!-- Pull Calc JS -->
-<script src="{{ site.baseurl }}/apps/pull-calc/pull-calc-i18n.js?v={{ site.time | date: '%s' }}"></script>
+<script type="module" src="{{ site.baseurl }}/i18n/service/i18n-service.js?v={{ site.time | date: '%s' }}"></script>
+<script defer src="{{ site.baseurl }}/i18n/service/i18n-adapter.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/apps/pull-calc/pull-calc.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/apps/pull-calc/pull-calc-extra.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/apps/pull-calc/pull-calc-plan.js?v={{ site.time | date: '%s' }}"></script>
@@ -586,16 +587,10 @@ redirect_from:
         }
 
         // Initialize on DOM ready
-        if (document.readyState === 'loading') {
-            document.addEventListener('DOMContentLoaded', () => {
-                const lang = detectLang();
-                Navigation.load('pull-calc');
-                updateSEOTags(lang);
-            });
-        } else {
+        document.addEventListener('DOMContentLoaded', async function () {
             const lang = detectLang();
             Navigation.load('pull-calc');
             updateSEOTags(lang);
-        }
+        });
     })();
 </script>
